src/content/docs/ko/sdk/react-native/v4/features/preinstalled.mdx
---
title: "사전 설치된 앱 활동 전송"
description: "사전 설치된 앱에서 정보를 전송하도록 캠페인을 구성합니다."
slug: "en/sdk/react-native/v4/features/preinstalled"
versions: 
    - 
        label: "v5"
        value: "v5"
        default: true
    - 
        label: "v4"
        value: "v4"
redirects: 
    v5: "/en/sdk/react-native/features/preinstalled"
---
Adjust SDK를 사용하여 사용자의 기기에 사전 설치된 앱의 활동을 기록할 수 있습니다. 이 방법으로 캠페인을 통해 앱을 다운로드하지 않은 사용자의 정보를 전송할 수 있습니다.

config 객체에는 해당 기능을 제어하는 `boolean` `preinstallTrackingEnabled` 속성이 포함되어 있습니다. 사전 설치 측정을 활성화하려면 config 객체의 `preinstallTrackingEnabled` 속성에 `boolean` 값을 할당합니다.

```jsx
const adjustConfig = new AdjustConfig(
   "{YourAppToken}",
   AdjustConfig.EnvironmentSandbox,
);

adjustConfig.setPreinstallTrackingEnabled(true);

Adjust.create(adjustConfig);
```

디폴트 링크 토큰 \{\#default\-link\-token\}
-----------------------------------------

디폴트 링크 토큰을 설정하면 모든 사전 설치를 미리 정의된 Adjust 링크에 어트리뷰션할 수 있습니다. Adjust는 어트리뷰션 소스가 변경될 때까지 이 토큰에 대한 모든 정보를 기록합니다. 설정 방법:

1. [Campaign Lab에서 새로운 캠페인 링크를 생성합니다](https://help.adjust.com/en/article/links).

   ```text
   https://app.adjust.com/{token}
   ```

2. 이 토큰을 복사하고 config 객체의 [`defaultTracker` 속성](/en/sdk/flutter/configuration#set-default-link-token)에 할당합니다.

   ```jsx
   const adjustConfig = new AdjustConfig(
      "{YourAppToken}",
      AdjustConfig.EnvironmentSandbox,
   );
   
   adjustConfig.setDefaultTracker("{TrackerToken}");
   
   Adjust.create(adjustConfig);
   ```

3. 앱을 빌드하고 실행합니다. 로깅이 활성화된 경우 로그에 다음과 같은 메시지가 표시됩니다.

   ```text
   Default tracker: 'abc123'.
   ```

